--- a/src/styles/contact.css
+++ b/src/styles/contact.css
@@ -1,6 +1,14 @@
-.rrss-btn {
+.rrss-btn, .chat-btn {
     cursor: pointer;
   }
+
+.chat-image {
+  transition: .2s linear;
+}
+
+.chat-image:hover {
+  transform: scale(1.2); 
+}
 
 .rrss-image { 
     display: block;
@@ -9,57 +17,53 @@
 
 @media only screen and (max-width: 500px) {
 
-  .rrss-div {
-    margin-top: 200px;
-    margin-bottom: 30px;
+  .chat-image {
+    width: 40px;
+    position: absolute; 
+    max-width: 20vh;
+    right: .5vw; 
+    top: 55svh;
   }
 
   .row .row-cols-4 {
-    width: 60%;
-    margin-left: 60px;
+    width: 70%;
   }
 
   .rrss-title{
-    margin: 15px;
-    padding-left: 60px;
+    margin-top: 100px;
   }
 
 }
 
 @media only screen and (min-width: 500px) {
 
-  .row .row-cols-4 {
-    width: 48%;
-    margin-left: 100px;
-  }
+    .chat-image {
+      width: 40px;
+      position: absolute; 
+      max-width: 20vh;
+      right: .5vw; 
+      top: 55svh;
+    }
 
-  .rrss-title{
-    padding-left: 110px;
-  }
+    .row .row-cols-4 {
+      width: 50%;
+    }
+
+    .rrss-title{
+      margin-top: 100px;
+    }
 
 }
 
 @media only screen and (min-width: 768px) {
-
   .row .row-cols-4 {
-    width: 40%;
-    margin-left: 200px;
-  }
-
-  .rrss-title{
-    padding-left: 210px;
+    width: 35%;
   }
 }
 
 @media only screen and (min-width: 992px) {
-
   .row .row-cols-4 {
     width: 26%;
-    margin-left: 50px;
-  }
-
-  .rrss-title{
-    padding-left: 60px;
   }
 }
 
