--- a/src/styles/transition_text.css
+++ b/src/styles/transition_text.css
@@ -1,9 +1,20 @@
 .button_transition_text {
-    background-color:rgb(233, 223, 223);
+    background-color:rgba(255, 255, 255, 0);
     border-radius: 40%;
     transition: .2s linear;
 }
 
 .button_transition_text:hover {
-    transform: scale(1.2);
+    transform: scale(1.2); 
   }
+
+.circle-title{
+    position: absolute; 
+    max-width: 20vh;
+    left: 12vw; 
+    top: 100svh;
+}
+
+.circle-title:hover{
+    transform: scale(1.2); 
+}
