--- a/src/styles/contact.css
+++ b/src/styles/contact.css
@@ -19,7 +19,7 @@
 
   .chat-image {
     width: 40px;
-    position: absolute; 
+    position: relative; 
     max-width: 20vh;
     right: .5vw; 
     top: 55svh;
@@ -37,12 +37,25 @@
 
 @media only screen and (min-width: 500px) {
 
-    .chat-image {
-      width: 40px;
+   .chat-div{
+      width: 1px;
+      height: 1px;
+      position: relative;
+      right: 1px;
+    }
+
+    .chat-btn {
       position: absolute; 
-      max-width: 20vh;
-      right: .5vw; 
-      top: 55svh;
+      left: 691px; 
+      padding-right: 0 !important;
+    } 
+
+     .chat-image {
+      width: 100%;
+    }  
+
+    .collapse-card{
+
     }
 
     .row .row-cols-4 {
@@ -56,18 +69,32 @@
 }
 
 @media only screen and (min-width: 768px) {
+  
+  .chat-btn {
+    left: 725px; 
+  } 
+
   .row .row-cols-4 {
     width: 35%;
   }
 }
 
 @media only screen and (min-width: 992px) {
+
+  .chat-btn {
+    left: 900px; 
+  } 
+
   .row .row-cols-4 {
     width: 26%;
   }
 }
 
 @media only screen and (min-width: 1200px) {
+
+  .chat-btn {
+    left: 1100px; 
+  } 
 
   .row .row-cols-4 {
     width: 20%;
