--- a/src/styles/contact.css
+++ b/src/styles/contact.css
@@ -1,3 +1,6 @@
+.btn {
+  border: transparent !important;
+}
 .rrss-btn, .chat-btn {
     cursor: pointer;
   }
@@ -15,15 +18,25 @@
     height: auto;
 }
 
-@media only screen and (max-width: 500px) {
+@media only screen and (min-width: 200px) {
+  .chat-btn {
+    width: 1%;
+    position: absolute; 
+    right: 6px; 
+    top: 500px;
+    padding-right: 0 !important;
+  } 
 
-  .chat-image {
-    width: 40px;
-    position: relative; 
-    max-width: 20vh;
-    right: .5vw; 
-    top: 55svh;
+  .chat-btn:hover {
+    position: absolute; 
+    right: 12px; 
   }
+
+   .chat-image {
+    width: 120%;
+    position: absolute; 
+    padding-right: 0 !important;
+  }  
 
   .row .row-cols-4 {
     width: 70%;
@@ -33,29 +46,45 @@
     margin-top: 100px;
   }
 
+  .collapse-card{
+    position: relative;
+    right: 120px;
+    width: 400px;
+  }
+
+  .card {
+    width: 100%;
+    font-size: 8px;
+  }
+
+  .card .card {
+    width: 100% !important;
+  }
+}
+
+@media only screen and (min-width: 400px) {
+
+  .row .row-cols-4 {
+    width: 70%;
+  }
+
+  .rrss-title{
+    margin-top: 100px;
+  }
+
+  .collapse-card {
+    left: 10px;
+  }
+
 }
 
 @media only screen and (min-width: 500px) {
-
-   .chat-div{
-      width: 1px;
-      height: 1px;
-      position: relative;
-      right: 1px;
-    }
-
-    .chat-btn {
-      position: absolute; 
-      left: 691px; 
-      padding-right: 0 !important;
-    } 
-
-     .chat-image {
-      width: 100%;
-    }  
+    .chat-image {
+      width: 90%;
+    }   
 
     .collapse-card{
-
+      left: 10svh;
     }
 
     .row .row-cols-4 {
@@ -69,10 +98,9 @@
 }
 
 @media only screen and (min-width: 768px) {
-  
-  .chat-btn {
-    left: 725px; 
-  } 
+  .chat-image {
+    width: 70%;
+  }   
 
   .row .row-cols-4 {
     width: 35%;
@@ -80,10 +108,9 @@
 }
 
 @media only screen and (min-width: 992px) {
-
-  .chat-btn {
-    left: 900px; 
-  } 
+  .chat-image {
+    width: 60%;
+  }   
 
   .row .row-cols-4 {
     width: 26%;
@@ -91,10 +118,9 @@
 }
 
 @media only screen and (min-width: 1200px) {
-
-  .chat-btn {
-    left: 1100px; 
-  } 
+  .chat-image {
+    width: 50%;
+  }   
 
   .row .row-cols-4 {
     width: 20%;
