--- a/src/styles/webs.css
+++ b/src/styles/webs.css
@@ -1,7 +1,8 @@
 .image {
-    position: relative;
+    position: absolute;
     transition: transform .2s; 
     margin: 0 auto;
+    
 }
 
 .image:hover{
@@ -22,15 +23,11 @@
     opacity: 0;
     transition: 0.4s;
     cursor: pointer; 
-}
+} 
 
-.cardBody:hover{ 
-    opacity: 1;
-}
-
-.card-full {
-    width: 100%;
-    height: 100%;
+.card-full{
+    width: 100% !important;
+    height: 100% !important;
     top: 0;
     left: 0;
     position: absolute;
@@ -39,6 +36,11 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    cursor: pointer; 
+}
+
+.cardBody:hover{ 
+    opacity: 1;
 }
 
 .cardBody .cardTitle{
