--- a/src/styles/transition_text.css
+++ b/src/styles/transition_text.css
@@ -1,18 +1,15 @@
 .button_transition_text {
-    background-color:rgba(255, 255, 255, 0);
-    border-radius: 40%;
     transition: .2s linear;
 }
 
 .button_transition_text:hover {
-    transform: scale(1.2); 
+    transform: scale(1.2);
   }
 
 .circle-title{
     position: relative;
     bottom: 70px;
-}
-
-.circle-title:hover{
-    transform: scale(1.2); 
+    color: rgb(51, 10, 255);
+    font-size: 8px;
+    white-space: pre-line; /*toma los espacios dentro de las backticks``*/
 }
