--- a/src/App.css
+++ b/src/App.css
@@ -4,3 +4,15 @@
   box-sizing: border-box;
 }
 
+body {
+  background-image: url(../public/img/fondo.jpg);
+  -webkit-background-size: cover; 
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: right;
+  background-attachment: fixed;
+}
+
+
