--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,8 @@
 }
 
 body {
-  background-image: url(../public/img/fondo.jpg);
+  /*background-image: url(../public/img/fondo.jpg);*/
+  
   -webkit-background-size: cover; 
   -moz-background-size: cover;
   -o-background-size: cover;
