--- a/src/styles/donations.css
+++ b/src/styles/donations.css
@@ -15,3 +15,36 @@
     transform: scale(1.1);
     background-color: #90bcc3;
 }
+
+@media only screen and (min-width: 200px){
+    .div-container{
+        min-height: 100vh;
+    }
+    #p-1 {
+        margin-top: 2rem;
+    }
+    .image-donar{
+        width: 60% !important;
+    }
+}
+@media only screen and (min-width: 300px){
+    .div-container{
+        min-height: 30vh;
+    }
+}
+@media only screen and (min-width: 620px){
+    .image-donar{
+        width: 40% !important;
+    }
+}
+@media only screen and (min-width: 1200px){
+    .div-container{
+        min-height: 100vh;
+    }
+    #p-1 {
+        margin-top: 4rem;
+    }
+    .image-donar{
+        width: 25% !important;
+    }
+}
